// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css prop react basic 1`] = `
.glamor-0 {
  color: red;
  font-size: 1px;
}

<p
  className="glamor-0"
>
  hello world
</p>
`;

exports[`css prop react kitchen sink 1`] = `
.glamor-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 6;
  color: red;
}

.glamor-1 {
  color: blue;
}

.glamor-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.glamor-3:hover {
  font-weight: bold;
  color: gray;
}

.glamor-3 {
  color: red;
  border-radius: 5;
}

<div
  className="css__legacy-stuff glamor-4"
>
  <h1
    className="glamor-0"
  >
    BOOM
  </h1>
  <p
    className="test_class1 glamor-1"
  >
    Hello
  </p>
  <p
    className="test_class1 test___class45 glamor-2"
  >
    World
  </p>
  <p
    className="glamor-3"
  >
    hello world
  </p>
</div>
`;

exports[`css prop react objects 1`] = `
.glamor-0 {
  color: red;
  font-size: 1px;
}

<p
  className="glamor-0"
>
  hello world
</p>
`;

exports[`css prop react string expression 1`] = `
.glamor-0 {
  color: red;
  background: blue;
  font-size: 48px;
}

<p
  className="glamor-0"
>
  hello world
</p>
`;
